welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:-6: error: Missing closing brace `}' assumed here
try {
^monkeyTrouble:1: error: expected class or object definition
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
^